# wacc-rs

./: Cargo.toml  README.md
fn_pipe/src/: lib.rs
fn_pipe_proc/src/: lib.rs
src/: parser.rs
syntax/: Cargo.toml
syntax/src/: SourceId.rs  ast.rs  lib.rs  main.rs  node.rs  nonempty.rs  parser.rs  source.rs  span.rs  token.rs
