[package]
name = "wacc_syntax"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2"
internment = { version = "0.8.6", features = ["arc"] }
chumsky = { features = ["std", "stacker", "memoization", "pratt", "regex"], git = "https://github.com/zesterer/chumsky", rev = "282bf5e" } # currently latest chumsky commit
ariadne = "0.5.0"